syntax = "proto3";

option csharp_namespace = "PaymentGrpcService";

package payment;

service PaymentService {
  rpc CreatePayment (CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc GetPaymentStatus (GetPaymentStatusRequest) returns (GetPaymentStatusResponse);
}

message CreatePaymentRequest {
  string orderId = 1;
  double amount = 2;
  string currency = 3;
}

message CreatePaymentResponse {
  string paymentId = 1;
  string status = 2; // Pending, Succeeded, Failed
}

message GetPaymentStatusRequest {
  string paymentId = 1;
}

message GetPaymentStatusResponse {
  string paymentId = 1;
  string status = 2;
}